# books-scraper

./: .gitignore  README.md  main.py  model.py  pyproject.toml  report.py
